--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.application.name=Animal Shelter
+server.port=8090
+spring.datasource.url=${URL}
+spring.datasource.username=${USER}
+spring.datasource.password=${PASSWORD}
+hibernate.show_sql=true
+hibernate.format_sql=true
+spring.jpa.show-sql=true
