Adding the picture upload functionality fro pets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=${PASSWORD}
 hibernate.show_sql=true
 hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+spring.servlet.multipart.max-file-size=10MB
