Email service added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,14 @@ spring.datasource.password=${PASSWORD}
 hibernate.show_sql=true
 hibernate.format_sql=true
 spring.jpa.show-sql=true
-
 spring.servlet.multipart.max-file-size=10MB
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=loncarevicclena@gmail.com
+#spring.mail.password=gfmntdklezelzjsq
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+##sslVerificationDisabled=true
+#spring.mail.smtp.ssl.trust = "smtp.gmail.com"
+#spring.mail.transport.protocol = "smtp"
+#spring.mail.debug = true
